--- a/RandomLevelGeneratorDemo/RandomLevelGeneratorDemo.csproj
+++ b/RandomLevelGeneratorDemo/RandomLevelGeneratorDemo.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-	<IncludeAllContentForSelfExtract>True</IncludeAllContentForSelfExtract>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
